--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             const submitButton = document.getElementById("submit");
             const responseField = document.getElementById("response");
     
-            submit.addEventListener("click", async () => {
+            submitButton.addEventListener("click", async () => {
                 responseField.textContent = "Loading...";
     
                 const model = models.value;
